K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    managed-by: clearledger
    env: production
  name: clearledger
